Fix break template when add comment has content's length is too long (content-comment-too-long.png)

--- a/catalog/view/theme/default/stylesheet/common/yes.css
+++ b/catalog/view/theme/default/stylesheet/common/yes.css
@@ -1652,9 +1652,8 @@ a.btn-notification:hover .notification-item-name > i {
 .post_new  .txt_editor {  
 }
 .txt_editor .post_input {
-  min-height: 70px;
+  min-height: 50px;
   margin: 0px;
-  border:none;
 }
 .post_new .post_new_control  {
     height: 25px;
